--- a/index.html
+++ b/index.html
@@ -144,8 +144,11 @@ async function handleOrder(){
   /* 5. 구글 시트 전송 */
   try{
     const response = await fetch(SCRIPT_URL, {
-      method: "POST",
-      body: JSON.stringify(order)
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify(order)
     });
 
     const result = await response.json();
@@ -169,5 +172,6 @@ async function handleOrder(){
 
 </body>
 </html>
+
 
 
