--- a/index.html
+++ b/index.html
@@ -1,228 +1,61 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>설성마켓 공동구매 주문서</title>
+  <meta charset="UTF-8" />
+  <title>설성푸드 공동구매 주문서</title>
 
-<style>
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", sans-serif;
-    background: #f7f7f7;
-    margin: 0;
-    padding: 20px;
-  }
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f6f7f9;
+      padding: 20px;
+    }
 
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
+    .container {
+      max-width: 420px;
+      margin: auto;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
 
-  .container {
-    max-width: 480px;
-    margin: auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-  }
+    h1 {
+      text-align: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
 
-  label {
-    font-weight: bold;
-    display: block;
-    margin-top: 15px;
-  }
+    .info {
+      background: #f0f2f5;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
 
-  input, select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 6px;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-    font-size: 14px;
-  }
-
-  .product {
-    border: 1px solid #eee;
-    border-radius: 10px;
-    padding: 12px;
-    margin-top: 12px;
-  }
-
-  .product-name {
-    font-weight: bold;
-    margin-bottom: 6px;
-  }
-
-  .product-price {
-    color: #666;
-    font-size: 14px;
-    margin-bottom: 8px;
-  }
-
-  .qty-control {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .qty-control button {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border: none;
-    background: #222;
-    color: #fff;
-    font-size: 18px;
-  }
-
-  .qty {
-    font-size: 16px;
-    font-weight: bold;
-  }
-
-  .total {
-    margin-top: 20px;
-    font-size: 18px;
-    text-align: right;
-    font-weight: bold;
-  }
-
-  .order-btn {
-    width: 100%;
-    margin-top: 20px;
-    padding: 14px;
-    font-size: 16px;
-    background: #000;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-  }
-
-  textarea {
-    width: 100%;
-    height: 140px;
-    margin-top: 12px;
-    border-radius: 8px;
-    padding: 10px;
-    font-size: 14px;
-  }
-
-  .copy-btn {
-    width: 100%;
-    margin-top: 10px;
-    padding: 12px;
-    border-radius: 10px;
-    border: 1px solid #ddd;
-    background: #fafafa;
-  }
-
-  .disabled {
-    opacity: 0.5;
-    pointer-events: none;
-  }
-</style>
+    button {
+      width: 100%;
+      padding: 14px;
+      background: #2f80ed;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="container">
+    <h1>설성푸드 공동구매 주문서</h1>
 
-<h2>설성마켓 공동구매</h2>
+    <div class="info">
+      ✅ 화면 테스트 단계입니다.<br />
+      다음 단계에서 상품 / 주문 기능이 추가됩니다.
+    </div>
 
-<div class="container">
-
-<label>오픈채팅 닉네임</label>
-<input id="nickname" placeholder="닉네임 입력">
-
-<label>방문 수령일</label>
-<select id="visitDate">
-  <option value="">선택</option>
-  <option value="금">금요일</option>
-  <option value="토">토요일</option>
-  <option value="일">일요일</option>
-</select>
-
-<div id="productList"></div>
-
-<div class="total">총 합계: <span id="totalPrice">0</span>원</div>
-
-<button class="order-btn" onclick="submitOrder()">주문 완료</button>
-
-<textarea id="orderMessage" readonly>주문내역이 없습니다</textarea>
-<button class="copy-btn" onclick="copyMessage()" disabled id="copyBtn">📋 주문내역 복사</button>
-
-</div>
-
-<script>
-const products = [
-  { name: "무항생제 한우 1등급 등심 200g", price: 15900, qty: 0 },
-  { name: "제주한돈 육포 50g x 4팩", price: 9800, qty: 0 },
-  { name: "우된장 한우된장찌개 밀키트 x2", price: 9900, qty: 0 },
-  { name: "뉴욕 피터루거 스테이크 하우스 밀키트 x4", price: 19900, qty: 0 },
-
-  // 확장용
-  // { name: "추가상품", price: 10000, qty: 0 },
-];
-
-let locked = false;
-
-function renderProducts() {
-  const el = document.getElementById("productList");
-  el.innerHTML = "";
-
-  products.forEach((p, i) => {
-    const div = document.createElement("div");
-    div.className = "product";
-    div.innerHTML = `
-      <div class="product-name">${p.name}</div>
-      <div class="product-price">${p.price.toLocaleString()}원</div>
-      <div class="qty-control">
-        <button onclick="changeQty(${i}, -1)">−</button>
-        <div class="qty">${p.qty}</div>
-        <button onclick="changeQty(${i}, 1)">＋</button>
-      </div>
-    `;
-    el.appendChild(div);
-  });
-}
-
-function changeQty(i, d) {
-  if (locked) return;
-  products[i].qty = Math.max(0, products[i].qty + d);
-  renderProducts();
-  updateTotal();
-}
-
-function updateTotal() {
-  const t = products.reduce((s,p)=>s+p.qty*p.price,0);
-  document.getElementById("totalPrice").innerText = t.toLocaleString();
-}
-
-function submitOrder() {
-  const nick = nickname.value.trim();
-  const visit = visitDate.value;
-  const sel = products.filter(p=>p.qty>0);
-
-  if (!nick || !visit || sel.length===0) {
-    alert("입력값을 확인해주세요");
-    return;
-  }
-
-  locked = true;
-  let msg = `${nick}님\n`;
-  sel.forEach(p=>msg+=`${p.name} ${p.qty}개\n`);
-  msg += `\n총 ${sel.reduce((s,p)=>s+p.qty*p.price,0).toLocaleString()}원\n\n농협 301-0297-8175-81\n설성푸드`;
-  orderMessage.value = msg;
-  copyBtn.disabled = false;
-}
-
-function copyMessage() {
-  orderMessage.select();
-  document.execCommand("copy");
-  alert("복사 완료! 오픈채팅에 붙여넣기 하세요.");
-}
-
-renderProducts();
-</script>
-
+    <button disabled>주문 기능 준비중</button>
+  </div>
 </body>
 </html>
